# rag-eval-harness

./: .env.example  README.md  pyproject.toml
data/: golden.yml
examples/: baseline_rag.py
harness/: __init__.py  judge.py  metrics.py  report.py  run_eval.py
