[project]
name = "rag-eval-harness"
version = "0.1.0"
description = "Production-grade evals for RAG systems — faithfulness, relevance, recall, latency, cost."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darrshan Govender", email = "darrshangovender@gmail.com" }]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
